# ck-nntest

./: .ckr.json  .gitignore  CHANGES  CHANGES.txt  COPYRIGHT.txt  README.md
dataset/.cm/: alias-a-tensor-conv-fcn16s  alias-u-be291345e4226822
dataset/tensor-conv-0001/: README.md
dataset/tensor-conv-fcn16s/: README.md  data.csv
dataset/tensor-conv-mobilenets-v1-0.75-160/: data.csv
dataset/tensor-conv1x1-inception-v3/: README.md
dataset/tensor-conv1x1-mobilenets/: README.md
dataset/tensor-conv3x3-inception-v3/: README.md
dataset/tensor-conv5x5-inception-v3/: README.md
dataset/tensor-depthwiseconv-mobilenets/: README.md
dataset/tensor-fullyconnected-0001/: README.md
dataset/tensor-gemm-0001/: test-shape-2-3-4-1-0.json
dataset/tensor-lstm-mlperf-rnnt/: random-0-000000.json  random-0-000001.json  random-0-000002.json  random-0-000003.json  random-0-000004.json  shape-0-1.json
dataset/tensor-softmax-0001/: shape-5250000-1-1.json
jnotebook/analyse-conv-mobilenets-v1-1.0-224/: analysis.ipynb
module/nntest/: module.py
package/.cm/: alias-a-plugin-lstm-naive  alias-u-9872906347fa85ad
package/lib-nntest/: ck_nntest_armcl.h  ck_nntest_caffe_fc.h  ck_nntest_common.h
package/plugin-lstm-rnnt-dec-glow/: install.sh
package/plugin-lstm-rnnt-dec-onnx/: convert_to_onnx.py
package/plugin-lstm-rnnt-post-glow/: install.sh  lstm_rnnt_post.py
package/plugin-lstm-rnnt-post-onnx/: convert_to_onnx.py  install.sh
package/plugin-lstm-rnnt-post-pytorch/: install.sh
package/plugin-lstm-rnnt-pre-glow/: install.sh
package/plugin-lstm-rnnt-pre-onnx/: convert_to_onnx.py
program/avgpool-armcl-opencl/: avgpool.cpp
program/avgpool-armcl-opencl-uint8/: avgpool.cpp
program/conv-armcl-opencl/: CMakeLists.txt  conv.cpp
program/conv-armcl-opencl-uint8/: conv.cpp
program/depthwiseconv-armcl-opencl/: CMakeLists.txt  depthwiseconv.cpp
program/depthwiseconv-armcl-opencl/.cm/: info.json  meta.json
program/depthwiseconv-armcl-opencl/tmp/: depthwiseconv  depthwiseconv.dump  depthwiseconv.md5  tmp-deps.json
program/directconv-armcl-opencl/: CMakeLists.txt  directconv.cpp
program/directconv-armcl-opencl-uint8/: directconv.cpp
program/fullyconnected-armcl-opencl/: fullyconnected.cpp
program/resizebilinear-armcl-opencl/: CMakeLists.txt  resizebilinear.cpp
program/resizebilinear-armcl-opencl/.cm/: info.json  meta.json
program/resizebilinear-armcl-opencl/autotune/: tuner_scale.cpp
program/resizebilinear-armcl-opencl/tmp/: resizebilinear  resizebilinear.dump  resizebilinear.git_hash  resizebilinear.md5  tmp-deps.json
(+313 files in other folders)
